Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22227

Assertion `state_ == s_exec' failed in wsrep::client_state::start_transaction

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.4(EOL), 10.5(EOL)
    • 10.4.19, 10.5.10
    • Galera
    • None

    Description

      --source include/galera_cluster.inc
      --source include/have_log_bin.inc
       
      CREATE TABLE t1 (a INT) ENGINE=MyISAM;
      LOCK TABLE t1 WRITE CONCURRENT;
       
      --connect (con1,localhost,root,,test)
      SET lock_wait_timeout= 1;
      --error ER_LOCK_WAIT_TIMEOUT
      CREATE VIEW v1 AS SELECT * FROM t1;
      

      10.4 edc3899d

      mysqld: /data/src/10.4/wsrep-lib/include/wsrep/client_state.hpp:289: int wsrep::client_state::start_transaction(const wsrep::transaction_id&): Assertion `state_ == s_exec' failed.
      200412 18:39:34 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f26d25fe102 in __GI___assert_fail (assertion=0x55b51a7d2280 "state_ == s_exec", file=0x55b51a7d2220 "/data/src/10.4/wsrep-lib/include/wsrep/client_state.hpp", line=289, function=0x55b51a7d6900 <wsrep::client_state::start_transaction(wsrep::transaction_id const&)::__PRETTY_FUNCTION__> "int wsrep::client_state::start_transaction(const wsrep::transaction_id&)") at assert.c:101
      #8  0x000055b51894e281 in wsrep::client_state::start_transaction (this=0x62b000125408, id=...) at /data/src/10.4/wsrep-lib/include/wsrep/client_state.hpp:289
      #9  0x000055b518fe0b85 in wsrep_start_transaction (thd=0x62b00011f270, trx_id=45) at /data/src/10.4/sql/wsrep_trans_observer.h:137
      #10 0x000055b518fe52f4 in wsrep_bf_abort (bf_thd=0x62b00012d270, victim_thd=0x62b00011f270) at /data/src/10.4/sql/wsrep_thd.cc:353
      #11 0x000055b519001142 in wsrep_thd_bf_abort (bf_thd=0x62b00012d270, victim_thd=0x62b00011f270, signal=0 '\000') at /data/src/10.4/sql/service_wsrep.cc:203
      #12 0x000055b51a50de82 in wsrep_break_lock (data=0x61a0000d12c8, lock_queue1=0x61d00034b770, wait_queue=0x61d00034b740) at /data/src/10.4/mysys/thr_lock.c:708
      #13 0x000055b51a50eb17 in thr_lock (data=0x61a0000d12c8, owner=0x62b00012edf8, lock_wait_timeout=1) at /data/src/10.4/mysys/thr_lock.c:849
      #14 0x000055b51a511097 in thr_multi_lock (data=0x62b000136200, count=1, owner=0x62b00012edf8, lock_wait_timeout=1) at /data/src/10.4/mysys/thr_lock.c:1295
      #15 0x000055b5194c1584 in mysql_lock_tables (thd=0x62b00012d270, sql_lock=0x62b0001361d8, flags=0) at /data/src/10.4/sql/lock.cc:348
      #16 0x000055b5194c1125 in mysql_lock_tables (thd=0x62b00012d270, tables=0x62b0001361c0, count=1, flags=0) at /data/src/10.4/sql/lock.cc:300
      #17 0x000055b5188668af in lock_tables (thd=0x62b00012d270, tables=0x62b0001343e0, count=2, flags=0) at /data/src/10.4/sql/sql_base.cc:5480
      #18 0x000055b518864d0a in open_and_lock_tables (thd=0x62b00012d270, options=..., tables=0x62b0001343e0, derived=true, flags=0, prelocking_strategy=0x7f26b6bcbef0) at /data/src/10.4/sql/sql_base.cc:5226
      #19 0x000055b5187c4981 in open_and_lock_tables (thd=0x62b00012d270, tables=0x62b0001343e0, derived=true, flags=0) at /data/src/10.4/sql/sql_base.h:503
      #20 0x000055b518ca94d9 in mysql_create_view (thd=0x62b00012d270, views=0x62b0001343e0, mode=VIEW_CREATE_NEW) at /data/src/10.4/sql/sql_view.cc:450
      #21 0x000055b5189ef0c8 in mysql_execute_command (thd=0x62b00012d270) at /data/src/10.4/sql/sql_parse.cc:5922
      #22 0x000055b5189fc46a in mysql_parse (thd=0x62b00012d270, rawbuf=0x62b000134290 "CREATE VIEW v1 AS SELECT * FROM t1", length=34, parser_state=0x7f26b6bd15d0, is_com_multi=false, is_next_command=false) at /data/src/10.4/sql/sql_parse.cc:7900
      #23 0x000055b5189faeba in wsrep_mysql_parse (thd=0x62b00012d270, rawbuf=0x62b000134290 "CREATE VIEW v1 AS SELECT * FROM t1", length=34, parser_state=0x7f26b6bd15d0, is_com_multi=false, is_next_command=false) at /data/src/10.4/sql/sql_parse.cc:7704
      #24 0x000055b5189d10b0 in dispatch_command (command=COM_QUERY, thd=0x62b00012d270, packet=0x629000320271 "CREATE VIEW v1 AS SELECT * FROM t1", packet_length=34, is_com_multi=false, is_next_command=false) at /data/src/10.4/sql/sql_parse.cc:1827
      #25 0x000055b5189cda88 in do_command (thd=0x62b00012d270) at /data/src/10.4/sql/sql_parse.cc:1359
      #26 0x000055b518da5dc4 in do_handle_one_connection (connect=0x611000076670) at /data/src/10.4/sql/sql_connect.cc:1412
      #27 0x000055b518da5666 in handle_one_connection (arg=0x611000076670) at /data/src/10.4/sql/sql_connect.cc:1316
      #28 0x000055b51a3e3531 in pfs_spawn_thread (arg=0x61600008f4f0) at /data/src/10.4/storage/perfschema/pfs.cc:1869
      #29 0x00007f26d2e78fa3 in start_thread (arg=<optimized out>) at pthread_create.c:486
      #30 0x00007f26d26c74cf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Reproducible on 10.4, 10.5.
      Not reproducible on 10.3.
      No obvious problem on a non-debug build.

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              elenst Elena Stepanova
              Votes:
              2 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5.25h
                  5.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.