MDEV-22227 Assertion `state_ == s_exec' failed in wsrep::client_state::start_transaction

Removed redundant code for BF abort transaction in `thr_lock.cc`.

TOI operations will ignore provided lock_wait_timeout and use `LONG_TIMEOUT`
until operation is finished.